<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvWriteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tvWriteNameEvent"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etNameEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWriteName" />

        <TextView
            android:id="@+id/tvWriteDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvWriteDescriptionEvent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNameEvent" />

        <EditText
            android:id="@+id/etDescriptionEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWriteDescription" />

        <TextView
            android:id="@+id/tvWriteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvWriteDateEvent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDescriptionEvent" />

        <TextView
            android:id="@+id/tvWriteDateTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="До какого числа:"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvWriteDate"
            app:layout_constraintTop_toBottomOf="@id/etDescriptionEvent" />


        <TextView
            android:id="@+id/etDateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="_____________________"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWriteDate" />

        <TextView
            android:id="@+id/etDateEventTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="_____________________"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etDateEvent"
            app:layout_constraintTop_toBottomOf="@id/tvWriteDateTo"
            />

        <Button
            android:id="@+id/btAddSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Добавить секцию"
            app:layout_constraintTop_toBottomOf="@id/etDateEvent" />

        <EditText
            android:id="@+id/etSectionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите название секции"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btAddSection" />

        <EditText
            android:id="@+id/etSectionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите описание секции"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/etSectionName" />

        <Button
            android:id="@+id/btPlusSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSectionDescription" />


        <LinearLayout
            android:id="@+id/llContainerSect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btPlusSection">

        </LinearLayout>


        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Сохранить"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llContainerSect" />

        <Button
            android:id="@+id/btAddEventSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Добавить расписание"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btSave" />


    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>

