<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/etEditNameEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btBack"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Назад"
            android:id="@+id/btBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/etEditDescriptionEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEditNameEvent" />

        <TextView
            android:id="@+id/etEditDateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEditDescriptionEvent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="по"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toEndOf="@id/etEditDateEvent"
            app:layout_constraintEnd_toStartOf="@id/etEditDateToEvent"
            app:layout_constraintTop_toBottomOf="@id/etEditDescriptionEvent"/>

        <TextView
            android:id="@+id/etEditDateToEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/etEditDateEvent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@id/etEditDescriptionEvent" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/clS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEditDateEvent">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGreenWhite"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tvDescriptionRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clAddScheduleItem"
                tools:text="description" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clAddScheduleItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/rvSchedule">

                <TextView
                    android:id="@+id/etAddEditTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Время"
                    android:inputType="datetime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etAddEditInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Инфо"
                    android:inputType="text"
                    app:layout_constraintStart_toEndOf="@id/etAddEditTime"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btAddNewItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    app:layout_constraintEnd_toEndOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvSections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGreenWhite"
                app:layout_constraintTop_toBottomOf="@id/tvDescriptionRecycler">

            </android.support.v7.widget.RecyclerView>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/clAddSectionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/rvSections">

                <EditText
                    android:id="@+id/etAddSectionName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Название секции"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etAddSectionDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Описание секции"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etAddSectionName" />

                <Button
                    android:id="@+id/btAddNewSectionItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    app:layout_constraintEnd_toEndOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/btSaveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveChange"
            android:textSize="8sp"
            app:layout_constraintTop_toBottomOf="@id/clS" />

        <Button
            android:id="@+id/btAddSched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddSched"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clS" />

        <Button
            android:id="@+id/btAddSect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addSectionEvent"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btAddSched" />

        <Button
            android:id="@+id/btUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />



    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>